<resources>
    <string name="app_name">10120241Latihan2</string>
    <string name="connect_with_facebook">Connect with facebook</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="doesn_t_have_account">doesn\'t have account ?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="retype_password">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="job">Job</string>
    <string name="home_address">Home Address</string>
    <string name="default_location">Default Location</string>
    <string name="almost_there">Almost There</string>
    <string name="verify">Verify</string>
    <string name="send">send</string>
    <string name="doesn_t_get_the_code">doesn\'t get the code?</string>
    <string name="enter_verification_here">enter verification here</string>
    <string name="we_have_send_verification_code_to_your_email">We have send verification code to your email</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="resend">Resend</string>
    <string name="thanks_you_for_registering_with_us_one_more_step_you_need_check_your_email_to_active_your_account">Thanks you for registering with us. One more step, you need check your email
        to active your account</string>
    <string name="blood_type_o">Blood type: O</string>
    <string name="arby_febrian_saputro">Arby Febrian Saputro</string>
    <string name="_100">100</string>
    <string name="_75">75</string>
    <string name="_330">330</string>
    <string name="blood_give">BLOOD GIVE</string>
    <string name="blood_received">BLOOD RECEIVED</string>
    <string name="thanks">THANKS</string>
    <string name="search_donor">Search Donor</string>
    <string name="search_donor_near_you">Search donor near you</string>
    <string name="_4_users_needed_blood">4 users needed blood</string>
    <string name="message">Message</string>
    <string name="_4_users_need_blood">4 Users need blood</string>
    <string name="blood_needed">Blood needed</string>
    <string name="blood_type">Blood Type</string>
    <string name="reshus">Reshus</string>
</resources>