<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warna_light_blue"
    android:padding="@dimen/jarak_25dp"
    tools:context=".MainActivity4">

    <TextView
        android:id="@+id/tv_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/jarak_180dp"
        android:text="@string/verify_your_account"
        android:textColor="@color/warna_putih"
        android:textSize="@dimen/text_size_38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_wehave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/jarak_10dp"
        android:text="@string/we_have_send_verification_code_to_your_email"
        android:textColor="@color/warna_putih"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_verify" />

    <EditText
        android:id="@+id/et_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/jarak_42dp"
        android:backgroundTint="@color/warna_putih"
        android:gravity="center"
        android:hint="@string/enter_verification_here"
        android:textColor="@color/warna_putih"
        android:textColorHint="@color/warna_putih"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_wehave" />

    <Button
        android:id="@+id/bt_send"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/jarak_12dp"
        android:backgroundTint="@color/warna_light_blue"
        android:paddingTop="@dimen/jarak_14dp"
        android:paddingBottom="@dimen/jarak_14dp"
        android:text="@string/send"
        android:textColor="@color/warna_putih"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintCircleRadius="@dimen/jarak_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_enter"
        app:strokeColor="@color/warna_putih"
        app:strokeWidth="@dimen/jarak_1koma8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/jarak_14dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_send">

        <TextView
            android:id="@+id/tv_doesnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_size_12sp"
            android:layout_marginLeft="@dimen/text_size_12sp"
            android:text="@string/doesn_t_get_the_code"
            android:textColor="#f1f1f2"
            android:textSize="@dimen/text_size_14sp" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/jarak_4dp"
            android:text="@string/resend"
            android:textColor="@color/warna_putih"
            android:textSize="@dimen/text_size_14sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>